# Ape

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  publish.sh  pyproject.toml  requirements.txt  setup.py  test.ipynb.example
ape/: __init__.py  base.py
libs/ape-common/: pyproject.toml
libs/ape-common/ape/common/: __init__.py
libs/ape-common/ape/common/cache/: __init__.py  generator_cache.py  metric_cache.py  prompt_cache.py
libs/ape-common/ape/common/evaluate/: eval_config.py  evaluate.py
libs/ape-common/ape/common/evaluator/: evaluator.py
libs/ape-common/ape/common/generate/: __init__.py  generate.py  generate_base.py
libs/ape-common/ape/common/generator/: __init__.py  base_generator.py  generator.py
libs/ape-common/ape/common/global_metric/: __init__.py  average.py  global_metric_base.py
libs/ape-common/ape/common/metric/: __init__.py  cosine_similarity.py  json_match.py  metric_base.py  semantic_f1.py
libs/ape-common/ape/common/metric_prompts/: __init__.py  semantic-recall.prompt  statement-analysis.prompt
libs/ape-common/ape/common/prompt/: __init__.py  cost_tracker.py  prompt_base.py  utils.py
libs/ape-common/ape/common/types/: __init__.py  dataset_item.py  eval_result.py  response_format.py
libs/ape-common/ape/common/utils/: __init__.py  logging.py
libs/ape-core/: pyproject.toml
libs/ape-core/ape/core/: __init__.py
libs/ape-core/ape/core/core_prompts/: __init__.py  dataset-descriptor.prompt  describe-prompt.prompt  evolution-prompt-de.prompt  evolution-prompt-ga.prompt  evolution-prompt-para.prompt  evoprompt-prompt-de.prompt  evoprompt-prompt-ga.prompt  evoprompt-prompt-para.prompt  expel-failure-feedback-generator.prompt  expel-feedback-applier.prompt  expel-success-feedback-generator.prompt  gen-fewshot-placeholder.prompt  gen-instruction-with-eval.prompt  gen-instructions.prompt  gen-merged-prompt.prompt  gen-metric-description.prompt  reformat-prompt-json-object.prompt  reformat-prompt-json-schema.prompt  reformat-prompt-xml.prompt  text-grad-evo-applier.prompt  text-grad-evo-generator.prompt  text-gradient-applier.prompt  text-gradient-generator.prompt
libs/ape-core/ape/core/optimizer/: __init__.py  bootstrap_fewshot.py  optimizer_base.py  sampled_fewshot.py  storage.py  utils.py
libs/ape-core/ape/core/optimizer/mipro/: mipro.py  mipro_base.py  mipro_instruct.py  mipro_proposer.py  mipro_with_hil.py
libs/ape-core/ape/core/paraphraser/: base.py
libs/ape-core/ape/core/proposer/: dataset_summary_generator.py  evaluation_driven_proposer.py  grounded_proposer.py  utils.py
libs/ape-core/ape/core/trainer/: __init__.py  base.py  dspy_mipro_trainer.py  expel_trainer.py  fewshot_trainer.py  optuna_trainer.py  text_gradient_trainer.py
libs/ape-core/ape/core/trainer/community/: EXAMPLE_README.md
libs/ape-core/ape/core/trainer/community/expel/: README.md  expel_trainer.py
libs/ape-core/ape/core/trainer/papers/: EXAMPLE_README.md
libs/ape-core/ape/core/types/: report.py
libs/ape-core/ape/core/utils/: __init__.py
libs/ape-core/ape/core/v2/paraphraser/: __init__.py
libs/ape-core/ape/core/v2/trainer/: __init__.py  base.py  dspy_mipro_trainer.py  expel_trainer.py  fewshot_trainer.py  optuna_trainer.py  text_gradient_trainer.py  text_gradient_trainer_all.py  text_gradient_trainer_model_match.py  text_gradient_trainer_val.py
libs/ape-core/ape/core/v2/types/: __init__.py  report.py
(+219 files in other folders)
